<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@id/btm_nav_home">

    <fragment
            android:id="@+id/btm_nav_home"
            android:name="com.thestudyguide.activities.main.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_dashboard"
            android:name="com.thestudyguide.activities.main.ui.dashboard.DashboardFragment"
            android:label="@string/title_application"
            tools:layout="@layout/fragment_dashboard"/>

    <fragment
            android:id="@+id/btm_nav_notification"
            android:name="com.thestudyguide.activities.main.ui.notifications.NotificationsFragment"
            android:label="@string/title_notifications"
            tools:layout="@layout/fragment_notifications"/>

</navigation>